src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     primary_expression -> ID
Rule 2     primary_expression -> INTEGER
Rule 3     primary_expression -> STRING
Rule 4     primary_expression -> TRUE
Rule 5     primary_expression -> FALSE
Rule 6     primary_expression -> CHARACTER
Rule 7     primary_expression -> ( expression )
Rule 8     postfix_expression -> primary_expression
Rule 9     postfix_expression -> postfix_expression [ expression ]
Rule 10    postfix_expression -> postfix_expression ( )
Rule 11    postfix_expression -> postfix_expression ( argument_expression_list )
Rule 12    postfix_expression -> postfix_expression . ID
Rule 13    postfix_expression -> postfix_expression PTR ID
Rule 14    postfix_expression -> postfix_expression INC
Rule 15    postfix_expression -> postfix_expression DEC
Rule 16    argument_expression_list -> assignment_expression
Rule 17    argument_expression_list -> argument_expression_list , assignment_expression
Rule 18    unary_expression -> postfix_expression
Rule 19    unary_expression -> INC unary_expression
Rule 20    unary_expression -> DEC unary_expression
Rule 21    unary_expression -> unary_operator cast_expression
Rule 22    unary_operator -> &
Rule 23    unary_operator -> *
Rule 24    unary_operator -> +
Rule 25    unary_operator -> -
Rule 26    unary_operator -> ~
Rule 27    unary_operator -> !
Rule 28    cast_expression -> unary_expression
Rule 29    cast_expression -> ( type_name ) cast_expression
Rule 30    multiplicative_expression -> cast_expression
Rule 31    multiplicative_expression -> multiplicative_expression * cast_expression
Rule 32    multiplicative_expression -> multiplicative_expression / cast_expression
Rule 33    multiplicative_expression -> multiplicative_expression % cast_expression
Rule 34    additive_expression -> multiplicative_expression
Rule 35    additive_expression -> additive_expression + multiplicative_expression
Rule 36    additive_expression -> additive_expression - multiplicative_expression
Rule 37    relational_expression -> additive_expression
Rule 38    relational_expression -> relational_expression < additive_expression
Rule 39    relational_expression -> relational_expression > additive_expression
Rule 40    relational_expression -> relational_expression LE additive_expression
Rule 41    relational_expression -> relational_expression GE additive_expression
Rule 42    equality_expression -> relational_expression
Rule 43    equality_expression -> equality_expression EQUAL relational_expression
Rule 44    equality_expression -> equality_expression NE relational_expression
Rule 45    and_expression -> equality_expression
Rule 46    and_expression -> and_expression & equality_expression
Rule 47    exclusive_or_expression -> and_expression
Rule 48    exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 49    inclusive_or_expression -> exclusive_or_expression
Rule 50    inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 51    logical_and_expression -> inclusive_or_expression
Rule 52    logical_and_expression -> logical_and_expression AND inclusive_or_expression
Rule 53    logical_or_expression -> logical_and_expression
Rule 54    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 55    conditional_expression -> logical_or_expression
Rule 56    conditional_expression -> logical_or_expression ? expression : conditional_expression
Rule 57    assignment_expression -> conditional_expression
Rule 58    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 59    assignment_operator -> =
Rule 60    assignment_operator -> MUL_EQ
Rule 61    assignment_operator -> DIV_EQ
Rule 62    assignment_operator -> MOD_EQ
Rule 63    assignment_operator -> ADD_EQ
Rule 64    assignment_operator -> SUB_EQ
Rule 65    assignment_operator -> AND_EQ
Rule 66    assignment_operator -> XOR_EQ
Rule 67    assignment_operator -> OR_EQ
Rule 68    expression -> assignment_expression
Rule 69    expression -> expression , assignment_expression
Rule 70    constant_expression -> conditional_expression
Rule 71    declaration -> declaration_specifiers ;
Rule 72    declaration -> declaration_specifiers init_declarator_list ;
Rule 73    declaration_specifiers -> <empty>
Rule 74    declaration_specifiers -> type_specifier
Rule 75    declaration_specifiers -> type_specifier declaration_specifiers
Rule 76    init_declarator_list -> init_declarator
Rule 77    init_declarator_list -> init_declarator_list , init_declarator
Rule 78    init_declarator -> declarator
Rule 79    init_declarator -> declarator = initializer
Rule 80    type_specifier -> VOID
Rule 81    type_specifier -> CHAR
Rule 82    type_specifier -> INT
Rule 83    type_specifier -> BOOL
Rule 84    type_specifier -> struct_specifier
Rule 85    type_specifier -> class_definition
Rule 86    class_definition -> CLASS ID { class_member_list }
Rule 87    class_member_list -> class_member
Rule 88    class_member_list -> class_member_list class_member
Rule 89    class_member -> function_definition
Rule 90    class_member -> declaration
Rule 91    struct_specifier -> STRUCT ID { struct_declaration_list }
Rule 92    struct_declaration_list -> struct_declaration
Rule 93    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 94    struct_declaration -> specifier_qualifier_list struct_declarator_list ;
Rule 95    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 96    specifier_qualifier_list -> type_specifier
Rule 97    struct_declarator_list -> struct_declarator
Rule 98    struct_declarator_list -> struct_declarator_list , struct_declarator
Rule 99    struct_declarator -> declarator
Rule 100   struct_declarator -> : constant_expression
Rule 101   struct_declarator -> declarator : constant_expression
Rule 102   declarator -> pointer direct_declarator
Rule 103   declarator -> direct_declarator
Rule 104   direct_declarator -> ID
Rule 105   direct_declarator -> ( declarator )
Rule 106   direct_declarator -> direct_declarator [ constant_expression ]
Rule 107   direct_declarator -> direct_declarator [ ]
Rule 108   direct_declarator -> direct_declarator ( parameter_list )
Rule 109   direct_declarator -> direct_declarator ( identifier_list )
Rule 110   direct_declarator -> direct_declarator ( )
Rule 111   pointer -> *
Rule 112   pointer -> * pointer
Rule 113   parameter_list -> parameter_declaration
Rule 114   parameter_list -> parameter_list , parameter_declaration
Rule 115   parameter_declaration -> declaration_specifiers declarator
Rule 116   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 117   parameter_declaration -> declaration_specifiers
Rule 118   identifier_list -> ID
Rule 119   identifier_list -> identifier_list , ID
Rule 120   type_name -> specifier_qualifier_list
Rule 121   type_name -> specifier_qualifier_list abstract_declarator
Rule 122   abstract_declarator -> pointer
Rule 123   abstract_declarator -> direct_abstract_declarator
Rule 124   abstract_declarator -> pointer direct_abstract_declarator
Rule 125   direct_abstract_declarator -> ( abstract_declarator )
Rule 126   direct_abstract_declarator -> [ ]
Rule 127   direct_abstract_declarator -> [ constant_expression ]
Rule 128   direct_abstract_declarator -> direct_abstract_declarator [ ]
Rule 129   direct_abstract_declarator -> direct_abstract_declarator [ constant_expression ]
Rule 130   direct_abstract_declarator -> ( )
Rule 131   direct_abstract_declarator -> ( parameter_list )
Rule 132   direct_abstract_declarator -> direct_abstract_declarator ( )
Rule 133   direct_abstract_declarator -> direct_abstract_declarator ( parameter_list )
Rule 134   initializer -> assignment_expression
Rule 135   initializer -> { initializer_list }
Rule 136   initializer -> { initializer_list , }
Rule 137   initializer_list -> initializer
Rule 138   initializer_list -> initializer_list , initializer
Rule 139   statement -> input_statement
Rule 140   statement -> output_statement
Rule 141   statement -> compound_statement
Rule 142   statement -> expression_statement
Rule 143   statement -> selection_statement
Rule 144   statement -> iteration_statement
Rule 145   statement -> jump_statement
Rule 146   compound_statement -> { statement_list }
Rule 147   compound_statement -> { declaration_list }
Rule 148   compound_statement -> { declaration_list statement_list }
Rule 149   declaration_list -> declaration
Rule 150   declaration_list -> declaration_list declaration
Rule 151   statement_list -> statement
Rule 152   statement_list -> statement_list statement
Rule 153   expression_statement -> ;
Rule 154   expression_statement -> expression ;
Rule 155   selection_statement -> IF ( expression ) statement
Rule 156   selection_statement -> IF ( expression ) statement ELSE statement
Rule 157   iteration_statement -> WHILE ( expression ) statement
Rule 158   iteration_statement -> FOR ( expression_statement expression_statement expression ) statement
Rule 159   jump_statement -> CONTINUE ;
Rule 160   jump_statement -> BREAK ;
Rule 161   jump_statement -> RETURN ;
Rule 162   jump_statement -> RETURN expression ;
Rule 163   translation_unit -> external_declaration
Rule 164   translation_unit -> translation_unit external_declaration
Rule 165   external_declaration -> function_definition
Rule 166   external_declaration -> declaration
Rule 167   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 168   function_definition -> declaration_specifiers declarator compound_statement
Rule 169   function_definition -> declarator declaration_list compound_statement
Rule 170   function_definition -> declarator compound_statement
Rule 171   input_statement -> CIN IN ID ;
Rule 172   output_statement -> COUT output_list ;
Rule 173   output_list -> OUT primary_expression
Rule 174   output_list -> output_list OUT primary_expression

Terminals, with rules where they appear

!                    : 27
%                    : 33
&                    : 22 46
(                    : 7 10 11 29 105 108 109 110 125 130 131 132 133 155 156 157 158
)                    : 7 10 11 29 105 108 109 110 125 130 131 132 133 155 156 157 158
*                    : 23 31 111 112
+                    : 24 35
,                    : 17 69 77 98 114 119 136 138
-                    : 25 36
.                    : 12
/                    : 32
:                    : 56 100 101
;                    : 71 72 94 153 154 159 160 161 162 171 172
<                    : 38
=                    : 59 79
>                    : 39
?                    : 56
ADD_EQ               : 63
AND                  : 52
AND_EQ               : 65
BOOL                 : 83
BREAK                : 160
CHAR                 : 81
CHARACTER            : 6
CIN                  : 171
CLASS                : 86
CONTINUE             : 159
COUT                 : 172
DEC                  : 15 20
DIV_EQ               : 61
ELSE                 : 156
EQUAL                : 43
FALSE                : 5
FOR                  : 158
GE                   : 41
ID                   : 1 12 13 86 91 104 118 119 171
IF                   : 155 156
IN                   : 171
INC                  : 14 19
INT                  : 82
INTEGER              : 2
LE                   : 40
MOD_EQ               : 62
MUL_EQ               : 60
NE                   : 44
OR                   : 54
OR_EQ                : 67
OUT                  : 173 174
PTR                  : 13
RETURN               : 161 162
STRING               : 3
STRUCT               : 91
SUB_EQ               : 64
TRUE                 : 4
VOID                 : 80
WHILE                : 157
XOR_EQ               : 66
[                    : 9 106 107 126 127 128 129
]                    : 9 106 107 126 127 128 129
^                    : 48
error                : 
{                    : 86 91 135 136 146 147 148
|                    : 50
}                    : 86 91 135 136 146 147 148
~                    : 26

Nonterminals, with rules where they appear

abstract_declarator  : 116 121 125
additive_expression  : 35 36 37 38 39 40 41
and_expression       : 46 47 48
argument_expression_list : 11 17
assignment_expression : 16 17 58 68 69 134
assignment_operator  : 58
cast_expression      : 21 29 30 31 32 33
class_definition     : 85
class_member         : 87 88
class_member_list    : 86 88
compound_statement   : 141 167 168 169 170
conditional_expression : 56 57 70
constant_expression  : 100 101 106 127 129
declaration          : 90 149 150 166
declaration_list     : 147 148 150 167 169
declaration_specifiers : 71 72 75 115 116 117 167 168
declarator           : 78 79 99 101 105 115 167 168 169 170
direct_abstract_declarator : 123 124 128 129 132 133
direct_declarator    : 102 103 106 107 108 109 110
equality_expression  : 43 44 45 46
exclusive_or_expression : 48 49 50
expression           : 7 9 56 69 154 155 156 157 158 162
expression_statement : 142 158 158
external_declaration : 163 164
function_definition  : 89 165
identifier_list      : 109 119
inclusive_or_expression : 50 51 52
init_declarator      : 76 77
init_declarator_list : 72 77
initializer          : 79 137 138
initializer_list     : 135 136 138
input_statement      : 139
iteration_statement  : 144
jump_statement       : 145
logical_and_expression : 52 53 54
logical_or_expression : 54 55 56
multiplicative_expression : 31 32 33 34 35 36
output_list          : 172 174
output_statement     : 140
parameter_declaration : 113 114
parameter_list       : 108 114 131 133
pointer              : 102 112 122 124
postfix_expression   : 9 10 11 12 13 14 15 18
primary_expression   : 8 173 174
relational_expression : 38 39 40 41 42 43 44
selection_statement  : 143
specifier_qualifier_list : 94 95 120 121
statement            : 151 152 155 156 156 157 158
statement_list       : 146 148 152
struct_declaration   : 92 93
struct_declaration_list : 91 93
struct_declarator    : 97 98
struct_declarator_list : 94 98
struct_specifier     : 84
translation_unit     : 164 0
type_name            : 29
type_specifier       : 74 75 95 96
unary_expression     : 19 20 28 58
unary_operator       : 21

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (163) translation_unit -> . external_declaration
    (164) translation_unit -> . translation_unit external_declaration
    (165) external_declaration -> . function_definition
    (166) external_declaration -> . declaration
    (167) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (168) function_definition -> . declaration_specifiers declarator compound_statement
    (169) function_definition -> . declarator declaration_list compound_statement
    (170) function_definition -> . declarator compound_statement
    (71) declaration -> . declaration_specifiers ;
    (72) declaration -> . declaration_specifiers init_declarator_list ;
    (73) declaration_specifiers -> .
    (74) declaration_specifiers -> . type_specifier
    (75) declaration_specifiers -> . type_specifier declaration_specifiers
    (102) declarator -> . pointer direct_declarator
    (103) declarator -> . direct_declarator
    (80) type_specifier -> . VOID
    (81) type_specifier -> . CHAR
    (82) type_specifier -> . INT
    (83) type_specifier -> . BOOL
    (84) type_specifier -> . struct_specifier
    (85) type_specifier -> . class_definition
    (111) pointer -> . *
    (112) pointer -> . * pointer
    (104) direct_declarator -> . ID
    (105) direct_declarator -> . ( declarator )
    (106) direct_declarator -> . direct_declarator [ constant_expression ]
    (107) direct_declarator -> . direct_declarator [ ]
    (108) direct_declarator -> . direct_declarator ( parameter_list )
    (109) direct_declarator -> . direct_declarator ( identifier_list )
    (110) direct_declarator -> . direct_declarator ( )
    (91) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (86) class_definition -> . CLASS ID { class_member_list }

  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
    ;               reduce using rule 73 (declaration_specifiers -> .)
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    BOOL            shift and go to state 13
    *               shift and go to state 16
    ID              shift and go to state 17
    (               shift and go to state 18
    STRUCT          shift and go to state 19
    CLASS           shift and go to state 20

  ! *               [ reduce using rule 73 (declaration_specifiers -> .) ]
  ! ID              [ reduce using rule 73 (declaration_specifiers -> .) ]
  ! (               [ reduce using rule 73 (declaration_specifiers -> .) ]

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    pointer                        shift and go to state 8
    direct_declarator              shift and go to state 9
    struct_specifier               shift and go to state 14
    class_definition               shift and go to state 15

state 1

    (0) S' -> translation_unit .
    (164) translation_unit -> translation_unit . external_declaration
    (165) external_declaration -> . function_definition
    (166) external_declaration -> . declaration
    (167) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (168) function_definition -> . declaration_specifiers declarator compound_statement
    (169) function_definition -> . declarator declaration_list compound_statement
    (170) function_definition -> . declarator compound_statement
    (71) declaration -> . declaration_specifiers ;
    (72) declaration -> . declaration_specifiers init_declarator_list ;
    (73) declaration_specifiers -> .
    (74) declaration_specifiers -> . type_specifier
    (75) declaration_specifiers -> . type_specifier declaration_specifiers
    (102) declarator -> . pointer direct_declarator
    (103) declarator -> . direct_declarator
    (80) type_specifier -> . VOID
    (81) type_specifier -> . CHAR
    (82) type_specifier -> . INT
    (83) type_specifier -> . BOOL
    (84) type_specifier -> . struct_specifier
    (85) type_specifier -> . class_definition
    (111) pointer -> . *
    (112) pointer -> . * pointer
    (104) direct_declarator -> . ID
    (105) direct_declarator -> . ( declarator )
    (106) direct_declarator -> . direct_declarator [ constant_expression ]
    (107) direct_declarator -> . direct_declarator [ ]
    (108) direct_declarator -> . direct_declarator ( parameter_list )
    (109) direct_declarator -> . direct_declarator ( identifier_list )
    (110) direct_declarator -> . direct_declarator ( )
    (91) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (86) class_definition -> . CLASS ID { class_member_list }

  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ( resolved as shift
    ;               reduce using rule 73 (declaration_specifiers -> .)
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    BOOL            shift and go to state 13
    *               shift and go to state 16
    ID              shift and go to state 17
    (               shift and go to state 18
    STRUCT          shift and go to state 19
    CLASS           shift and go to state 20

  ! *               [ reduce using rule 73 (declaration_specifiers -> .) ]
  ! ID              [ reduce using rule 73 (declaration_specifiers -> .) ]
  ! (               [ reduce using rule 73 (declaration_specifiers -> .) ]

    external_declaration           shift and go to state 21
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    pointer                        shift and go to state 8
    direct_declarator              shift and go to state 9
    struct_specifier               shift and go to state 14
    class_definition               shift and go to state 15

state 2

    (163) translation_unit -> external_declaration .

    VOID            reduce using rule 163 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 163 (translation_unit -> external_declaration .)
    INT             reduce using rule 163 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 163 (translation_unit -> external_declaration .)
    *               reduce using rule 163 (translation_unit -> external_declaration .)
    ID              reduce using rule 163 (translation_unit -> external_declaration .)
    (               reduce using rule 163 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 163 (translation_unit -> external_declaration .)
    CLASS           reduce using rule 163 (translation_unit -> external_declaration .)
    $end            reduce using rule 163 (translation_unit -> external_declaration .)
    ;               reduce using rule 163 (translation_unit -> external_declaration .)


state 3

    (165) external_declaration -> function_definition .

    VOID            reduce using rule 165 (external_declaration -> function_definition .)
    CHAR            reduce using rule 165 (external_declaration -> function_definition .)
    INT             reduce using rule 165 (external_declaration -> function_definition .)
    BOOL            reduce using rule 165 (external_declaration -> function_definition .)
    *               reduce using rule 165 (external_declaration -> function_definition .)
    ID              reduce using rule 165 (external_declaration -> function_definition .)
    (               reduce using rule 165 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 165 (external_declaration -> function_definition .)
    CLASS           reduce using rule 165 (external_declaration -> function_definition .)
    $end            reduce using rule 165 (external_declaration -> function_definition .)
    ;               reduce using rule 165 (external_declaration -> function_definition .)


state 4

    (166) external_declaration -> declaration .

    VOID            reduce using rule 166 (external_declaration -> declaration .)
    CHAR            reduce using rule 166 (external_declaration -> declaration .)
    INT             reduce using rule 166 (external_declaration -> declaration .)
    BOOL            reduce using rule 166 (external_declaration -> declaration .)
    *               reduce using rule 166 (external_declaration -> declaration .)
    ID              reduce using rule 166 (external_declaration -> declaration .)
    (               reduce using rule 166 (external_declaration -> declaration .)
    STRUCT          reduce using rule 166 (external_declaration -> declaration .)
    CLASS           reduce using rule 166 (external_declaration -> declaration .)
    $end            reduce using rule 166 (external_declaration -> declaration .)
    ;               reduce using rule 166 (external_declaration -> declaration .)


state 5
